@@ -9,6 +9,7 @@ Sigla:
 
 0.9.4 - released 2008-09-29
 
++ Added function to allow plugin devs to add one or more javascript file to the backend html for their plugin. (issue 35)
 + Added auto-detected link to a plugin's documentation page. Checks for existence of documentation() function in plugin's controller (issue 33)
 + Added auto-detected link to a plugin's settings page. Checks for existence of settings() function in plugin's controller (issue 32)
 + Added Indonesian translation
